2010-05-18  Akira TAGOH  <tagoh@redhat.com>

	* src/factory.c (_watch_im_status_cb): don't restart the process
	if the exit status is 0. (rhbz#573604)

2010-03-23  Akira TAGOH  <tagoh@redhat.com>

	* backends/lxde/main.c: revise. run as the helper program
	not the dbus service.

	* src/factory.c: revert the changes of LXDE support code.

2010-03-23  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump to 0.108.0.

	Fix of rhbz#570462

	* src/factory.c (imsettings_manager_real_finalize): don't try to unref
	the dbus connection if the session is already closed.
	(main): likewise.

	* backends/gconf/main.c (main): don't try to unref the dbus connection
	if the session is already closed.

2010-03-17  Akira TAGOH  <tagoh@redhat.com>

	* backends/lxde/main.c (lxde_imsettings_change_to): fix a typo.

2010-03-16  Akira TAGOH  <tagoh@redhat.com>

	* backends/lxde/main.c: new.

	* backends/lxde/lxde-im-settings-daemon.service.in: new.

	* backends/lxde/introspection.xml: new.

	* configure.ac: Add the library dependencies check for LXDE.

	* src/factory.c (imsettings_manager_real_start_im): send a signal
	for LXDE.
	(imsettings_manager_real_stop_im): likewise.

	* imsettings/imsettings.h: add DBus stuff for LXDE.

	* data/xinput.sh.in.in (is_gtk_supported): add LXDE support.

2010-03-05  Akira TAGOH  <tagoh@redhat.com>

	* data/Makefile.am: make xinputinfo.sh executable.

	* configure.ac: Add x11 module check to avoid DSO issue.

2010-02-16  Akira TAGOH  <tagoh@redhat.com>

	* imsettings/imsettings-info.c (imsettings_info_notify_properties):
	Fix a segfault issue when /bin/sh points to non-bash shell.
	(rhbz#553680)

2010-02-05  Akira TAGOH  <tagoh@redhat.com>

	* backends/gconf/main.c (main): avoid a crash when the session bus
	isn't yet established or terminated. (rhbz#543005)

2010-01-04  Akira TAGOH  <tagoh@redhat.com>

	* src/factory.c (imsettings_manager_real_finalize): avoid a segfault
	in libnotify when the dbus session is being closed. (rhbz#530357)
