@@ -85,6 +85,7 @@ PKG_CHECK_MODULES(IMSETTINGS, dbus-1 >= $DBUS_REQUIRED
 			      gio-2.0 >= $GIO_REQUIRED)
 PKG_CHECK_MODULES(IMDAEMON, gtk+-2.0
 			    libnotify)
+PKG_CHECK_MODULES(GTHREAD, gthread-2.0)
 PKG_CHECK_MODULES(X11, x11)
 PKG_CHECK_MODULES(CHECK, check >= $CHECK_REQUIRED,
 	[use_check="yes"],
