@@ -1,0 +1,5 @@
+XIM=none
+XIM_PROGRAM=
+GTK_IM_MODULE=xim
+QT_IM_MODULE=xim
+sleep 10
