@@ -1,3 +1,8 @@
+2010-06-04  Akira TAGOH  <akira@tagoh.org>
+
+	* imsettings/imsettings-info.c (imsettings_info_notify_properties): 
+	Fix the race condition issue during popen. (rhbz#599924)
+
 2010-05-18  Akira TAGOH  <tagoh@redhat.com>
 
 	* src/factory.c (_watch_im_status_cb): don't restart the process
